# iot-api-service

./: .env  Cargo.toml  README.md  schema.sql
src/: lib.rs  main.rs
src/adapter/: app_context.rs  mod.rs  modules.rs  state.rs
src/adapter/persistence/: db_pool.rs  device_adapter.rs  device_repo.rs  mod.rs  temperature_adapter.rs
src/adapter/web/: mod.rs  request.rs  response.rs  web_api.rs  web_server.rs  web_state.rs
src/application/: mod.rs
src/application/port/: mod.rs  port_registry.rs
src/application/port/outbound/: load_avg_temperature_port.rs  mod.rs  save_device_port.rs  save_temperature_port.rs
src/application/port/usecase/: command.rs  device_command.rs  device_query.rs  mod.rs  query.rs  save_temperature_use_case.rs  use_case.rs
src/application/service/: device_command_service.rs  device_query_service.rs  mod.rs  save_temperature_service.rs
src/core/: hex.rs  mod.rs  time.rs
src/domain/: device.rs  mod.rs  temperature.rs
src/infra/: mod.rs  setup.rs
tests/: test_temp_parser.rs
