[package]
name = "iot-api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
anyhow = "1.0.75"
async-once-cell = "0.5.3"
async-std = "1.12.0"
async-trait = "0.1.74"
chrono = "0.4.31"
dotenv = "0.15"
env_logger = "0.10.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.19.0"
r2d2 = "0.8.10"
rust_decimal = "^1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
snafu = "0.7.5"
sqlx = { version = "^0.7", features = ["runtime-async-std", "mysql", "macros", "chrono", "json", "bigdecimal", "uuid", "time"] } # [] runtime-async-std-rustls runtime-actix-rustls  runtime-tokio-rustls
thiserror = "1.0.50"
utoipa = { version = "4", features = ["actix_extras"] }

[dev-dependencies]
actix-rt = "2.9.0"
