[package]
name = "iot-api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-web = "4.4"
anyhow = "1.0"
async-once-cell = "0.5"
async-std = "1.12"
async-trait = { version = "0.1", features = [] }
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
itertools = "0.12"
lazy_static = "1.4"
log = "0.4"
once_cell = "1.19"
r2d2 = "0.8"
rust_decimal = "^1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8"
sqlx = { version = "^0.7", features = ["runtime-async-std", "mysql", "macros", "chrono", "json", "bigdecimal", "uuid", "time"] } # [] runtime-async-std-rustls runtime-actix-rustls  runtime-tokio-rustls
thiserror = "1.0"
utoipa = { version = "4", features = ["actix_extras"] }

[dev-dependencies]
actix-rt = "2.9"
